Started the add and customize pizza flow that calls the /menu/pizza/{id} api endpoint to get the pizza config

--- a/app/src/app/features/menu/component/menu-list-item/menu-list-item.component.html
+++ b/app/src/app/features/menu/component/menu-list-item/menu-list-item.component.html
@@ -1,10 +1,10 @@
 <div class="menu-item">
   <div class="item-header">
     <div class="item-name">{{ item?.name }}</div>
-    <div class="item-price">${{ item?.priceDisplayStr }}</div>
+    <div class="item-price">{{ item?.priceDisplayStr }}</div>
   </div>
   <div class="item-details">
     <div class="item-description">{{ item?.description }}</div>
+    <button class="add-button" (click)="addItemToCart(item)">Add</button>
   </div>
 </div>
-
