--- a/app/src/app/core/app.component.html
+++ b/app/src/app/core/app.component.html
@@ -15,7 +15,8 @@
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
-    <app-menu></app-menu>
+    <!--<app-menu></app-menu>-->
+    <router-outlet></router-outlet>
   </div>
 </main>
 
